# persona-demo

./: README.md  main.py  pyproject.toml
unity/Assets/Scenes/: BgImage.cs  BgImage.renderTexture  MainScene.unity  OSC.cs  OscConnection.asset
unity/Assets/Scenes/Materials/: BgImage.mat
unity/ProjectSettings/: ProjectSettings.asset
